[package]
name = "hayatraQbot"
version = "0.1.0"
edition = "2024"

[dependencies]
ac-library-rs = "0.2.0"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.2"
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
traq-ws-bot = { version = "0.1.2", features = ["openapi"] }
